syntax = "proto3";
option go_package = "./messages";

/*  */
message Metadata {
    string file_name = 1;
    int32 num_chunks = 2;
    int32 chunk_size = 3;
    string check_sum = 4;
}

message Ack {
    bool check_sum_matched = 1;
}

message PutRequest {
        Metadata metadata = 1;
}

message PutResponse {
    bool available = 1;
    repeated string nodes = 2;
}

message GetRequest {
    string file_name = 1;
}

message GetResponse {
    bool exists = 1;
    repeated string nodes = 2;
}

message DeleteRequest {
    string file_name = 1;
}

message DeleteResponse {
    bool successful = 1;
}

message Registration {
    string node = 1;
}

message Heartbeat {
    string node = 1;
}

message Wrapper {
    oneof msg {
        Ack acknowledge_message = 1;
        PutRequest put_request_message = 2;
        PutResponse put_response_message = 3;
        GetRequest get_request_message = 4;
        GetResponse get_response_message = 5;
        DeleteRequest delete_request_message = 6;
        DeleteResponse delete_response_message = 7;
        Registration registration_message = 8;
        Heartbeat heartbeat_message = 9;
    }
}



